<resources>
    <string name="app_name">Hydraulica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Project: Hydraulica</string>
    <string name="nav_header_subtitle">Created by: Laura Fayola Wallace #125–431–197</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="menu_pcheck">Calculate Power</string>
    <string name="menu_supplier">Add Supplier</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About</string>

    <string name="give_thanks">Thank you for viewing my project!</string>

    <string name="menu_exit">Exit</string>


    <string name="menu_share">Share</string>
    <string name="menu_send">Send Me a Message</string>
    <string name="item_edit">Edit</string>
    <string name="item_delete">Delete</string>

    <string name="running">Calculating</string>

    <string name="calc">Measure Force</string>

    <string name="no_suppliers">No Suppliers Available</string>

    <string name="contactus">
        Main Auto Service\n
        402 Main St. Toronto ON\n
        M4C 4X8\n
        \n
        tel: (416) 288- 1636\n
        email: mechanic@someplace.ca\n
        url: http://www.fayola.net\n
    </string>
    <string name="no_affiliation">**(No affiliation with Main Auto Service)</string>
    <string name="map">See Map</string>
    <string name="title_activity_maps">Main Auto Shop</string>
    <string name="about_text">Created by Laura Fayola Wallace</string>
    <string name="ok">OK</string>


</resources>
