<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pcheck"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_pcheck" />
        <item
            android:id="@+id/nav_supplier"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_supplier" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
