<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/addie_size"
            android:text="@string/contactus"
            android:layout_gravity="top"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/see_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"/>
            <TextView
                android:id="@+id/noa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/noa_size"
                android:text="@string/no_affiliation"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>